--- a/README
+++ b/README
@@ -5,3 +5,5 @@ http://developer.chrome.com/extensions/getstarted.html
 http://developer.chrome.com/extensions/overview.html
 
 Also put source for getpocket.com's extension in /example.
+
+Next step might be to create a "Context Script" to eliminate the need for pushing the page action to reset the articles count.
